# vlow

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: build-app-bundle.sh  install-launchagent.sh  uninstall-launchagent.sh
src/vlow/: __main__.py  app.py  audio.py  config.py  hotkey.py  overlay.py  paste.py  recordings.py  replay.py  stream_aai.py  transcribe.py  transcribe_aai.py  transcribe_mlx.py
