[project]
name = "vlow"
version = "0.1.0"
description = "Local Whisper voice dictation with global hotkey paste"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "pynput>=1.7.7",
    "pyobjc-core>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "rumps>=0.4.0",
    "assemblyai>=0.30.0",
]

[project.scripts]
vlow = "vlow.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vlow"]
